--- a/lovely/globals.toml
+++ b/lovely/globals.toml
@@ -18,9 +18,17 @@ if love.system.getOS() == 'Android' or love.system.getOS() == 'iOS' then
 	self.F_VIDEO_SETTINGS = false
 	self.F_ENGLISH_ONLY = false
 	self.F_QUIT_BUTTON = false
-	self.F_MOBILE_UI = true
 end
 '''
+match_indent = true
+times = 1
+
+[[patches]]
+[patches.pattern]
+target = "globals.lua"
+pattern = "self.F_MOBILE_UI = false"
+position = "at"
+payload = "self.F_MOBILE_UI = true"
 match_indent = true
 times = 1
 
